# atlassian-agents

./: .env.sample  .gitignore  .mcp.json  Dockerfile  README.md  buildx.sh  docker-compose.yml  langgraph.json  main.py  pyproject.toml
.claude/: CLAUDE.md  old_CLAUDE.md
app/agents/: confluence_agent.py  universal_assistant.py
app/core/: config.py  consts.py  log_adapter.py
app/enums/: __init__.py
app/prompts/: __init__.py  check_sign.py
app/tests/: conftest.py
app/utils/: __init__.py  mcp_utils.py
caddy/: Caddyfile  README.md
deep-agents-ui/: Dockerfile  buildx.sh  package.json  pnpm-lock.yaml  交叉编译.md
deep-agents-ui/src/app/: layout.tsx  page.tsx
deep-agents-ui/src/app/components/ChatInterface/: ChatInterface.tsx
deep-agents-ui/src/app/components/ChatMessage/: ChatMessage.tsx
deep-agents-ui/src/app/components/MarkdownContent/: MarkdownContent.module.scss  MarkdownContent.tsx
deep-agents-ui/src/app/components/ThreadHistorySidebar/: ThreadHistorySidebar.tsx
deep-agents-ui/src/app/types/: types.ts
deep-agents-ui/src/app/utils/: sourceExtractor.ts
deep-agents-ui/src/lib/: client.ts
deep-agents-ui/src/lib/environment/: deployments.ts
deep-agents-ui/src/providers/: Auth.tsx
docs/: CONFLUENCE_AGENT_GUIDE.md  CONFLUENCE_AGENT_QUICK_REFERENCE.md
